--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.48",
+    "bcrypt": "^2.0.1",
     "meteor-node-stubs": "^0.4.1",
     "vue": "^2.5.16",
     "vue-hot-reload-api": "^2.3.0",
