--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-theme-chalk": "^2.4.4",
     "element-ui": "^2.4.4",
     "meteor-node-stubs": "^0.4.1",
+    "moment": "^2.22.2",
     "vue": "^2.5.16",
     "vue-drag-drop": "^1.1.4",
     "vue-events": "^3.1.0",
