--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "vue-hot-reload-api": "^2.3.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-meteor-tracker": "^1.0.3",
-    "vue-router": "^2.0.0"
+    "vue-router": "^2.0.0",
+    "vuelidate": "^0.7.4"
   },
   "meteor": {
     "mainModule": {
