--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.4.4",
     "lodash": "^4.17.10",
     "meteor-node-stubs": "^0.4.1",
+    "mobile-drag-drop": "^2.3.0-rc.1",
     "moment": "^2.22.2",
     "vue": "^2.5.16",
     "vue-drag-drop": "^1.1.4",
