--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^2.0.1",
     "element-theme-chalk": "^2.4.4",
     "element-ui": "^2.4.4",
+    "faker": "^4.1.0",
     "lodash": "^4.17.10",
     "meteor-node-stubs": "^0.4.1",
     "mobile-drag-drop": "^2.3.0-rc.1",
