couleur pour un projet

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.22.2",
     "showdown": "^1.8.6",
     "vue": "^2.5.16",
+    "vue-color": "^2.6.0",
     "vue-drag-drop": "^1.1.4",
     "vue-event-handler": "^1.1.0",
     "vue-flatpickr-component": "^7.0.5",
