--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "latelier",
   "private": true,
   "scripts": {
-    "start": "meteor run",
+    "start": "meteor run --settings settings-development.json",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
