--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-material": "^1.0.0-beta-10.2",
     "vue-meteor-tracker": "^1.0.3",
     "vue-router": "^2.0.0",
+    "vue-shortkey": "^3.1.6",
     "vue2vis": "0.0.15",
     "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
