Suppression dépendance à akryum:vue-router2
On utilise directement vue-router

--- a/settings-development.json
+++ b/settings-development.json
@@ -1,4 +1,4 @@
 {
   "generateFixtures": true,
-  "attachmentsPath": "../attachments"
+  "attachmentsPath": "/Users/jerome/rectorat/attachments/"
 }
