--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-shortkey": "^3.1.6",
     "vue2vis": "0.0.15",
     "vuelidate": "^0.7.4",
+    "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
   "meteor": {
