--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "latelier",
   "private": true,
   "scripts": {
-    "start": "meteor run --settings settings-development.json",
+    "start": "NO_HMR=1 meteor run --settings settings-development.json",
     "test": "meteor test --once --driver-package meteortesting:mocha",
     "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
     "visualize": "meteor --production --extra-packages bundle-visualizer"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.53",
+    "@babel/runtime": "^7.1.2",
     "bcrypt": "^2.0.1",
     "element-theme-chalk": "^2.4.4",
     "element-ui": "^2.4.4",
