Debut ajout roles

--- a/settings-development.json
+++ b/settings-development.json
@@ -1,4 +1,7 @@
 {
   "generateFixtures": true,
-  "attachmentsPath": "/Users/jerome/rectorat/attachments/"
+  "attachmentsPath": "/Users/jerome/rectorat/attachments/",
+  "roles": {
+    "admin": ["jerome@blondon.fr"]
+  }
 }
