--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-dragscroll": "^1.5.0",
     "vue-event-handler": "^1.1.0",
     "vue-hot-reload-api": "^2.3.0",
+    "vue-i18n": "^8.3.0",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-meteor-tracker": "^1.2.3",
     "vue-router": "^3.0.0",
