ajout conf from pour les emails

--- a/settings-development.json
+++ b/settings-development.json
@@ -1,6 +1,9 @@
 {
   "generateFixtures": true,
   "attachmentsPath": "/Users/jerome/rectorat/attachments/",
+  "email": {
+    "from": "noreply@latelierdesprojets.fr"
+  },
   "roles": {
     "admin": ["jerome@blondon.fr"]
   }
