wip sur les backgrounds

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@babel/runtime": "^7.1.5",
     "bcrypt": "^3.0.2",
     "faker": "^4.1.0",
+    "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "mobile-drag-drop": "^2.3.0-rc.1",
     "moment": "^2.22.2",
+    "path": "^0.12.7",
     "pretty-checkbox": "^3.0.3",
     "showdown": "^1.9.0",
     "vue": "^2.5.18",
