--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-meteor-tracker": "^1.2.3",
     "vue-router": "^3.0.2",
     "vue-shortkey": "^3.1.6",
+    "vue2-editor": "^2.6.6",
     "vue2vis": "0.0.15",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.3.12",
