--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^3.0.2",
     "faker": "^4.1.0",
     "fs-extra": "^7.0.1",
+    "linkifyjs": "^2.1.7",
     "lodash": "^4.17.11",
     "meteor-node-stubs": "^0.4.1",
     "mobile-drag-drop": "^2.3.0-rc.1",
