--- a/settings-development.json
+++ b/settings-development.json
@@ -6,5 +6,11 @@
   },
   "roles": {
     "admin": ["jerome.blondon@ac-lyon.fr"]
+  },
+  "public": {
+    "sso": {
+      "enabled": true,
+      "email": "ct-remote-email"
+    }
   }
 }
