revert vers vuejs 2.5 (drag drop cassé)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "path": "^0.12.7",
     "pretty-checkbox": "^3.0.3",
     "showdown": "^1.9.0",
-    "vue": "^2.6.8",
+    "vue": "2.5.18",
     "vue-color": "^2.7.0",
     "vue-drag-drop": "^1.1.4",
     "vue-dragscroll": "^1.8.3",
