On désactive la création d'utilisateurs au niveau des settings

--- a/settings-development.json
+++ b/settings-development.json
@@ -1,5 +1,6 @@
 {
   "generateFixtures": true,
+  "disableAccountCreation": false,
   "attachmentsPath": "/tmp/attachments/",
   "email": {
     "from": "noreply@ac-lyon.fr"
