Ajout du choix du protocole d'upload (http ou ddp) dans les settings

--- a/settings-development.sample.json
+++ b/settings-development.sample.json
@@ -7,5 +7,12 @@
   },
   "roles": {
     "admin": ["foo@bar.com"]
+  },
+  "public": {
+    "sso": {
+      "enabled": true,
+      "email": "ct-remote-email"
+    },
+    "uploadTransport": "http|ddp" 
   }
 }
