Par défaut : upload en ddp

--- a/settings-development.json
+++ b/settings-development.json
@@ -13,6 +13,6 @@
       "enabled": true,
       "email": "ct-remote-email"
     },
-    "uploadTransport": "http"
+    "uploadTransport": "ddp"
   }
 }
