--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-i18n": "^8.9.0",
     "vue-meteor-tracker": "^1.2.3",
     "vue-router": "^3.0.2",
+    "vue-router-multiguard": "^1.0.3",
     "vue-shortkey": "^3.1.6",
     "vue2-editor": "^2.6.6",
     "vue2vis": "0.0.15",
