--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@babel/runtime": "^7.3.4",
     "bcrypt": "^3.0.4",
+    "bpmn-js": "^3.3.1",
+    "diagram-js-minimap": "^1.3.0",
     "faker": "^4.1.0",
+    "file-saver": "^2.0.1",
     "fs-extra": "^7.0.1",
     "html-to-text": "^5.1.1",
     "linkifyjs": "^2.1.8",
