--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "pretty-checkbox": "^3.0.3",
     "showdown": "^1.9.0",
     "sortablejs": "^1.8.3",
-    "vue": "2.5.18",
+    "vue": "^2.6.0",
     "vue-color": "^2.7.0",
     "vue-drag-drop": "^1.1.4",
     "vue-dragscroll": "^1.8.3",
