--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "fs-extra": "^7.0.1",
     "html-to-text": "^5.1.1",
     "linkifyjs": "^2.1.8",
-    "lodash": "^4.17.11",
+    "lodash": ">=4.17.13",
     "meteor-node-stubs": "^0.4.1",
     "mobile-drag-drop": "^2.3.0-rc.1",
     "moment": "^2.24.0",
