--- a/settings-development.sample.json
+++ b/settings-development.sample.json
@@ -2,6 +2,7 @@
   "generateFixtures": true,
   "disableAccountCreation": false,
   "attachmentsPath": "/tmp/attachments/",
+  "notificationsPerUser": 50,
   "email": {
     "from": "foo@bar.com"
   },
