Add restriction for user search & invitations

--- a/settings-development.sample.json
+++ b/settings-development.sample.json
@@ -3,6 +3,10 @@
   "disableAccountCreation": false,
   "attachmentsPath": "/tmp/attachments/",
   "notificationsPerUser": 50,
+  "users": {
+    "search": "admin",
+    "invite": "admin"
+  },
   "email": {
     "from": "foo@bar.com"
   },
