Add support for elastic apm
see https://github.com/kschingiz/meteor-elastic-apm

--- a/settings-development.sample.json
+++ b/settings-development.sample.json
@@ -3,6 +3,12 @@
   "disableAccountCreation": false,
   "attachmentsPath": "/tmp/attachments/",
   "notificationsPerUser": 50,
+  "elasticApm": {
+    "enabled": true,
+    "options": {
+      "serviceName": "latelier"
+    }
+  },
   "users": {
     "search": "admin",
     "invite": "admin"
