Disable dynamic import on firefox <= 60
dynamic import uses fetch api.
On ff <= 60 this api does not send back cookies to server. This can be problematic on environment with sso activated.
(option credentials: "same-origin" is not set as default)

So legacy bundle is activated to serve a version without dyn import on ff < 60

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "meteor": {
     "mainModule": {
       "client": "client/main.js",
+      "legacy": "client/legacy.js",
       "server": "server/main.js"
     },
     "testModule": "test/main.js"
