Feature/select project (#43)
* Started tests with menu

* Search in projects

* Do no use 0 as default value for proj & org ids

Use null instead

* Fix task comparison

* Do not handle task detail open/close in this component

* Fix task opening/close mess

* Filter tasks by org id, remove org toolbar

* esc for hide search box

* Pagination: max visible items to 5 to avoid overflow

* Replace menu with normal card

* allow scroll when region > height

* Display count results, adapt width to input

* Update changelog

* Basic test for search

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "showdown": "^1.9.1",
     "simpl-schema": "^1.5.6",
     "sortablejs": "^1.10.1",
+    "v-click-outside": "^2.1.5",
     "vue": "^2.6.0",
     "vue-dragscroll": "^1.10.2",
     "vue-event-handler": "^1.1.8",
