Feature/print canvas (#45)
* Add template for canvas (not finished)

* Call weasyprint to convert html to pdf

* Prefer open document format instead of pdf

* Bottom tooltip

* Remove useless file

* Update changelog

* Improve template

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.6.3",
     "bcrypt": "^3.0.6",
     "bpmn-js": "^3.5.0",
+    "carbone": "^1.2.1",
     "diagram-js-minimap": "^1.3.0",
     "faker": "^4.1.0",
     "file-saver": "^2.0.2",
