--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue-hot-reload-api": "^2.3.4",
     "vue-i18n": "^8.15.0",
     "vue-meteor-tracker": "^1.2.3",
+    "vue-observe-visibility": "^0.4.6",
     "vue-router": "^3.1.3",
     "vue-router-multiguard": "^1.0.3",
     "vue-shortkey": "^3.1.7",
