--- a/settings-development.sample.json
+++ b/settings-development.sample.json
@@ -3,6 +3,7 @@
   "disableAccountCreation": false,
   "attachmentsPath": "/tmp/attachments/",
   "notificationsPerUser": 50,
+  "digestsRetention": 60,
   "elasticApm": {
     "enabled": true,
     "options": {
